--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,30 +1,31 @@
 ---
-title: "Landing Page"
+title: "Getting started"
 ---
 
-Some introduction text. Lists out all the headings from h1 to h6. Easy to customise. Some more text. Additional text.
+Welcome to the Undagi Code Creator documentation!
 
-# Heading H1
-Heading 1 text
+The learn course will guide you through everything you need to know to use Undagi Code Creator
 
-## Heading H2
-Heading 2 text
+If you have questions about anything related to Undagi Code, you're always welcome to ask our teams [Contact us Sections](https://undagicode.com/contact/)
 
-### Heading H3
-Heading 3 text
+### System Requirements
 
-#### Heading H4
-Heading 4 text
+- [Java 8.0](https://www.java.com) or later
+- Windows(7,8,10), Linux, MacOS
 
-##### Heading H5
-Heading 5 text
+### Manual Checking
 
-###### Heading H6
-Heading 6 text
+We recomend you check manually from command prompt, or your terminal using this script
 
-## Lists
-- Item 1
-- Item 2
-- Item 3
-- Item 4
-- Item 5
+```script
+ java -version
+
+ [or] 
+
+ java --v
+
+```
+
+#### You're Ready to go
+
+After everything ready you can start using it, still confusing ? let we guide you to made a application using it
